tests/baselines/reference/legacy-octal-integery-005-strict.errors.txt
legacy-octal-integery-005-strict.ts(14,1): error TS1121: Octal literals are not allowed. Use the syntax '0o5'.


==== legacy-octal-integery-005-strict.ts (1 errors) ====
    // Copyright (c) 2012 Ecma International.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    es5id: 7.8.3-7-s
    description: Strict Mode - octal extension (005) is forbidden in strict mode
    negative:
      phase: parse
      type: SyntaxError
    flags: [onlyStrict]
    ---*/
    
    
    005;
    ~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o5'.
    